# vivid

./: CMakeLists.txt
dependencies/: CMakeLists.txt
include/vivid/: colormap.h  conversion.h  data.h  vivid.h
include/vivid/data/: xterm.h
src/: color.cpp  colormap.cpp  hex.cpp  hsl.cpp  name.cpp  rgb8.cpp  srgb.cpp
tests/: catch.hpp
